fix gap size

--- a/src/output.css
+++ b/src/output.css
@@ -592,6 +592,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
